Improve error handling and adjust tests